# remine-ml

./: .gitignore  CLAUDE.md  Consensus_predictor .py  Hit_ratio_backtester .py  create_report.py  generate_summary.py  generate_summary_500.py  nifty_50.py  nifty_500.py  optimize_indicators.py  report.py  requirements.txt  start.py  update_dashboard.py
Regime_Detection/: .gitignore  CFI_WTI, 1D.csv  FX_IDC_USDINR, 1D.csv  INDIAVIX_daily.csv  MCX_CRUDEOIL1!, 1D.csv  NSE_BANKNIFTY, 1D.csv  NSE_BANKNIFTY_intraday_15m.csv  NSE_CNX500, 1D.csv  NSE_INDIAVIX_intraday_60m.csv  NSE_NIFTY, 1D.csv  NSE_NIFTY_intraday_15m.csv  NSE_NIFTY_intraday_60m.csv  NSE_SENSEX_intraday_15m.csv  README.md  REGIME_MODELS_REPORT.md  WORK_NOTE.md  add_trend.py  evaluation_output.csv  export_our_results.py  extend_daily_features.py  fetch_data.py  fetch_intraday.py  forecast_ahead.py  futurecheckfing.py  intraday_60m_NIFTY_eval.csv  intraday_hmm_60m_eval.csv  intraday_hmm_nifty50.py  intraday_hybrid_60m_eval.csv  intraday_hybrid_nifty50.py  intraday_nifty50.py  intraday_regime.py  intraday_session.py  intraday_trendchop_60m_eval.csv  intraday_trendchop_nifty50.py  intraday_volregime_60m_eval.csv  intraday_volregime_final_60m_eval.csv  intraday_volregime_final_nifty50.py  intraday_volregime_nifty50.py  live_forecast.py  main.py  (+32 more)
Regime_Detection/bindings/: Cargo.toml
Regime_Detection/core/: Cargo.toml
Regime_Detection/frontend/: app.js  index.html  page.tsx
Regime_Detection/output/: features.json  features_BANKNIFTY.json  features_CRUDE.json  features_NIFTY.json  features_NIFTY_500.json  (+39 more)
(+171 files in other folders)
