[project]
name = "regime-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.2",
    "maturin>=1.12.6",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.42.0",
    "xgboost>=3.2.0",
    "yfinance>=0.2.54",
]

[tool.uv.workspace]
members = [
    "venv",
]
